# inc_mw_log

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  clippy.toml
.github/workflows/: ci.yml
examples/rust/mw_log/: BUILD.bazel  Cargo.toml  build.rs
examples/rust/mw_log/src/: ffi.cc  ffi.rs  lib.rs  mw_log.cc
examples/rust/mw_log/src/include/: mw_log.h
mw/log/: BUILD  README.md  irecorder_factory.cpp  irecorder_factory.h  log_common.cpp  log_common.h  log_level.cpp  log_level.h  log_level_test.cpp  log_mode.h  log_stream.cpp  log_stream.h  log_stream_factory.cpp  log_stream_factory.h  log_stream_test.cpp  log_types.h  log_types_test.cpp  logger.cpp  logger.h  logger_container.cpp  logger_container.h  logger_container_test.cpp  logger_test.cpp  logging.cpp  logging.h  logging_test.cpp  metrics.yaml  recorder.cpp  recorder.h  recorder_mock.h  runtime.cpp  runtime.h  runtime_test.cpp  runtime_test_without_pointer_initialization.cpp  slot_handle.cpp  slot_handle.h  slot_handle_test.cpp
mw/log/configuration/: BUILD  configuration.cpp  configuration.h  configuration_file_discoverer.cpp  configuration_file_discoverer.h  configuration_file_discoverer_mock.cpp  configuration_file_discoverer_mock.h  configuration_file_discoverer_test.cpp  configuration_test.cpp  iconfiguration_file_discoverer.cpp  iconfiguration_file_discoverer.h  itarget_config_reader.cpp  itarget_config_reader.h  nvconfig.cpp  nvconfig.h  nvconfig_test.cpp  nvmsgdescriptor.h  target_config_reader.cpp  target_config_reader.h  target_config_reader_mock.cpp  (+2 more)
mw/log/detail/: BUILD  (+50 more)
(+134 files in other folders)
